...
        state hiveVal = "";
        state secureVal = "";
        
        build {
          Column {
             Padding(padding: {"all": 10.0}, child: 
               Text("Persistent Storage", style: {"fontSize": 24.0})
            );

            // Shared Preferences
            Container(
              margin: {"all": 10.0},
              padding: {"all": 10.0},
...
            icon: const Icon(Icons.code),
            onPressed: () {
              Navigator.push(
                context,
                MaterialPageRoute(
                  builder: (context) => CodePreviewScreen(
                    title: 'Storage',
                    source: fluxSource,
                  ),
                ),
              );
            },
          ),
...
